<resources>
    <string name="app_name">TimeManager</string>
    <string name="system_time_lock_summary" >TimeLock</string>
    <string name="system_time_lock_close" >Close</string>
    <string name="system_time_lock_open">Open</string>
    <string name="system_time_lock_features" > Features:\n 1, Set available time period.Children can only use the device during the available time period, and disable the device outside the time period.\n 2, Set the available duration to control how long your child will use the device each day.\n 3, The device rests. When the child uses the device for a certain length of time, the device temporarily locks the screen, allowing the child to rest and have eyes.</string>
    <string name="available_time_period">available time period</string>
    <string name="add_available_time_period">Add available time period</string>
    <string name="available_time">available time</string>
    <string name="add_available_time">Add available time</string>
    <string name="rest">rest</string>
    <string name="rest_switch">Rest switch</string>
    <string name="learn_time">Each learning time</string>
    <string name="rest_time">Every break</string>
    <string name="time_lock_password">Time lock password</string>
    <string name="modify_time_lock_password">Modify time lock password</string>
    <string name="message_dialog_title">warning</string>
    <string name="message_dialog_content">Please enter the password first time.</string>
    <string name="message_dialog_ok">OK</string>
    <string name="message_dialog_cancel">Cancel</string>
    <string name="entry_password">Enter password</string>
    <string name="entry_old_password">Enter old password</string>
    <string name="entry_password_again">enter password again</string>
    <string name="entry_old_password_error">Old password is wrong, please re-enter</string>
    <string name="entry_password_tip">Password must be at least 4 digits</string>
    <string name="entry_new_password_inconsistent">New passwords are inconsistent, please re-enter</string>
    <string name="entry_password_inconsistent">The passwords are inconsistent, please re-enter</string>
    <string name="entry_password_to_unlock">Please enter the time lock password</string>
    <string name="entry_password_to_unlock_tip"> Time lock password</string>
    <string name="entry_password_to_unlock_title">Config time lock password</string>
    <string name="toast_success">Config success</string>
    <string name="button_save">Save</string>
    <string name="set_period_title">Add device available time period</string>
    <string name="set_time_title">Add device available time</string>
    <string name="set_period_time_start">Available start time</string>
    <string name="set_period_time_end">Available end time</string>
    <string name="set_period_time_repeat">Repeat</string>
    <string name="set_period_time_warning">Change the available start time to be earlier than the available end time</string>
    <string name="set_period_time_sun">S</string>
    <string name="set_period_time_mon">M</string>
    <string name="set_period_time_tue">T</string>
    <string name="set_period_time_wed">W</string>
    <string name="set_period_time_thu">T</string>
    <string name="set_period_time_fri">F</string>
    <string name="set_period_time_sat">S</string>
    <string name="already_has_this_time">Already have the same time period</string>
    <string name="period_time_sunday">SUN</string>
    <string name="period_time_monday">MON</string>
    <string name="period_time_tuesday">TUE</string>
    <string name="period_time_wednesday">WED</string>
    <string name="period_time_thursday">THU</string>
    <string name="period_time_friday">FRI</string>
    <string name="period_time_saturday">SAT</string>
    <string name="dialog_delete">Delete</string>
    <string name="available_time_per_day">Available time per day</string>
    <string name="available_time_per_hour">h</string>
    <string name="available_time_per_min">min</string>
    <string name="available_time_per_warning">Available time cannot be zero</string>
    <string name="ach_learning_time">Each learning time</string>
    <string name="every_break">Every break</string>
    <string name="time_10min">10 min</string>
    <string name="time_15min">15 min</string>
    <string name="time_30min">30 min</string>
    <string name="time_45min">45 min</string>
    <string name="time_60min">60 min</string>
    <string name="text_not_available">  Now it is not available please enter the time lock password if you need to use it.</string>
    <string name="text_time_run_out">  The available time is running out today. please enter the time lock password if you need to use it.</string>
    <string name="text_rest_time">  Now for rest time. please enter the time lock password if you need to use it.</string>
    <string name="text_entry_password">  Please enter the time lock password.</string>
</resources>
