<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
    >
    <include
        layout="@layout/layout_top_view">
    </include>
    <LinearLayout
        android:id="@+id/ll_setPassword"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPassword"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="5dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/et_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="12"
            android:inputType="numberPassword"
            android:visibility="gone"
            android:hint="@string/entry_old_password"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:maxLength="12"
            android:hint="@string/entry_password"/>
        <EditText
            android:id="@+id/et_password_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="12"
            android:inputType="numberPassword"
            android:hint="@string/entry_password_again"/>

        <TextView
            android:id="@+id/tv_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textColor="@color/colorPasswordTip"
            android:text="@string/entry_password_tip"/>
        <LinearLayout
            android:layout_marginTop="5dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:background="#00000000"
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/message_dialog_cancel"/>
            <Button
                android:background="#00000000"
                android:id="@+id/btn_ensure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginStart="30dp"
                android:enabled="false"
                android:text="@string/message_dialog_ok"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>